Fix gap between property name and description

--- a/src/components/Property/Property.scss
+++ b/src/components/Property/Property.scss
@@ -12,6 +12,8 @@ $cell-padding: 10px;
 }
 
 .property-name {
+  width:1%;
+  white-space:nowrap;
   position: relative;
   span {
     display: inline-block;
